spacing fixes

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -950,6 +950,10 @@ hr.line.align-right {
 		margin: 10px 0;
 }
 
+.form-group {
+	margin-bottom: 1em;
+}
+
 .contactform form, .advancedcontactform form {
 	display: block;
 	padding: 30px;
@@ -972,6 +976,8 @@ hr.line.align-right {
 	line-height:@font-swatch4-line-height;
 	color: @color-swatch4;
 	letter-spacing: @font-swatch4-letter-spacing;
+	display: block;
+	margin-bottom: 5px;
 }
 
 .contactform input, .advancedcontactform input {
